--- a/ros_ws/src/orb_slam3/config/camera_and_slam_settings.yaml
+++ b/ros_ws/src/orb_slam3/config/camera_and_slam_settings.yaml
@@ -8,26 +8,26 @@ File.version: "1.0"
 Camera.type: "PinHole"
 
 # Camera calibration and distortion parameters (OpenCV) 
-
-Camera1.fx: 458.654
-Camera1.fy: 457.296
-Camera1.cx: 367.215
-Camera1.cy: 248.375
-
-Camera1.k1: -0.28340811
-Camera1.k2: 0.07395907
-Camera1.p1: 0.00019359
-Camera1.p2: 1.76187114e-05
+# 182.04010767430282, 181.96058158656675, 161.9195512794151, 153.77295468660398
+Camera1.fx: 182.04010767430282
+Camera1.fy: 181.96058158656675
+Camera1.cx: 161.9195512794151
+Camera1.cy: 153.77295468660398
+# -0.07299056810312483, -0.00542929749945422, -0.0008660339277163717, 0.0006391558355095592]
+Camera1.k1: -0.07299056810312483
+Camera1.k2: -0.00542929749945422
+Camera1.p1: -0.0008660339277163717
+Camera1.p2: 0.0006391558355095592
 
 # Camera resolution
-Camera.width: 752
-Camera.height: 480
+Camera.width: 324
+Camera.height: 244
 
 Camera.newWidth: 600
 Camera.newHeight: 350
 
 # Camera frames per second 
-Camera.fps: 20
+Camera.fps: 10
 
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
@@ -37,10 +37,10 @@ IMU.T_b_c1: !!opencv-matrix
    rows: 4
    cols: 4
    dt: f
-   data: [0.0148655429818, -0.999880929698, 0.00414029679422, -0.0216401454975,
-         0.999557249008, 0.0149672133247, 0.025715529948, -0.064676986768,
-        -0.0257744366974, 0.00375618835797, 0.999660727178, 0.00981073058949,
-         0.0, 0.0, 0.0, 1.0]
+   data: [-0.006577236683859483, -0.9999782380729134, -0.0005131648826354751, -0.02919941674295791,
+          -0.22460039902171453, 0.0019773459941815064, -0.9744489472835949, 1.1811080822848563,
+          0.9744287561011793, -0.0062939243252180255, -0.224608516756817, 0.6743382860157909,
+          0.0, 0.0, 0.0, 1.0]
 
 # IMU noise
 
@@ -49,17 +49,17 @@ IMU.T_b_c1: !!opencv-matrix
 # IMU.GyroWalk: 1.9393e-05 
 # IMU.AccWalk: 3.0000e-03 # 3e-03
 
-IMU.NoiseGyro: 1.7e-4 #1.6968e-04
-IMU.NoiseAcc: 2.0000e-3 #2.0e-3
-IMU.GyroWalk: 1.9393e-04  # 1.9393e-05
-IMU.AccWalk: 3.0000e-2 # 3e-03
+IMU.NoiseGyro: 0.0002602984004119891 #1.6968e-04
+IMU.NoiseAcc: 0.00017630383367353976 #2.0e-3
+IMU.GyroWalk: 2.0043114067565446e-05 # 1.9393e-05
+IMU.AccWalk: 3.432843394384884e-05 # 3e-03
 
 # IMU.NoiseGyro: 1e-3 # rad/s^0.5
 # IMU.NoiseAcc: 1e-2   # m/s^1.5
 # IMU.GyroWalk: 1e-7 # rad/s^1.5
 # IMU.AccWalk: 1e-7 # m/s^2.5
 
-IMU.Frequency: 200.0
+IMU.Frequency: 100.0
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
