--- a/ros_ws/src/crazyflie_package/package.xml
+++ b/ros_ws/src/crazyflie_package/package.xml
@@ -12,6 +12,22 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <depend>rclpy</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>cflib</depend>
+  <exec_depend>math</exec_depend>
+
+  <depend>cv_bridge</depend>
+  <depend>opencv</depend>
+  <depend>numpy</depend>
+  <exec_depend>argparse</exec_depend>
+  <exec_depend>socket</exec_depend>
+  <exec_depend>struct</exec_depend>
+  <exec_depend>threading</exec_depend>
+  <exec_depend>queue</exec_depend>
+  <exec_depend>time</exec_depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
