32 bit floating point problem, measurement unit in m/s^2 for the acceleration (multiplied for 9.81 in the code)

--- a/ros_ws/src/orb_slam3/config/camera_and_slam_settings.yaml
+++ b/ros_ws/src/orb_slam3/config/camera_and_slam_settings.yaml
@@ -49,10 +49,10 @@ IMU.T_b_c1: !!opencv-matrix
 # IMU.GyroWalk: 1.9393e-05 
 # IMU.AccWalk: 3.0000e-03 # 3e-03
 
-IMU.NoiseGyro: 0.0002602984004119891 #1.6968e-04
-IMU.NoiseAcc: 0.00017630383367353976 #2.0e-3
-IMU.GyroWalk: 2.0043114067565446e-05 # 1.9393e-05
-IMU.AccWalk: 3.432843394384884e-05 # 3e-03
+IMU.NoiseGyro: 0.0002602984004119891 
+IMU.NoiseAcc: 0.00017630383367353976 
+IMU.GyroWalk: 2.0043114067565446e-05 
+IMU.AccWalk: 3.432843394384884e-05 
 
 # IMU.NoiseGyro: 1e-3 # rad/s^0.5
 # IMU.NoiseAcc: 1e-2   # m/s^1.5
